# exec-diff

./: Cargo.toml  README.md
.github/workflows/: test.yaml
src/: assert.rs  color.rs  diff.rs  exec.rs  lib.rs
tests/: assert.rs  diff.rs
tests/fixtures/: color-always.txt  color-never.txt  non-unified.txt
