[package]
name = "exec-diff"
version = "0.1.1"
description = "A small utility to execute the GNU diff command"
edition = "2021"
authors = ["khai96_ <hvksmr1996@gmail.com>"]
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/exec-diff"
repository = "https://github.com/KSXGitHub/exec-diff.git"
keywords = [
  "diff",
  "gnu-diff",
  "wrapper",
]
include = [
  "/src",
  "/Cargo.toml",
  "/README.md",
  "/LICENSE.md",
]

[dependencies]
pipe-trait = "0.4.0"
derive_more = "0.99.17"
command-extra = "1.0.0"
tempfile = "3.5.0"
pretty_assertions = "1.3.0"
